# naive-surface-nets

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: mesh.h  regular_grid.h  shared_vertex_mesh.h  surface_nets.h
src/: surface_nets.cpp
